# chdlm-mini-dashboard

./: .editorconfig  .env.example  .gitignore  README.adoc  README.md  eslint.config.mjs  index.d.ts  nuxt.config.ts  package.json  pyproject.toml  render.yaml
app/: .gitignore  README.md  app.vue  eslint.config.mjs  nuxt.config.ts  package.json  quasar.config.ts  tailwind.config.js  tsconfig.json
app/assets/: main.css  styles.scss
app/components/: page-content.vue
app/composables/api/: index.ts
app/layouts/: default.vue  viewport.vue
app/openapi/chdlm/: openapi.yaml
app/pages/: index.vue  pourquoi.vue  savoir-plus.vue
app/pages/participation/: index.vue  pourquoi.vue  savoir-plus.vue  savoirplus.vue
app/src/boot/: axios.ts  signals.ts
app/src/css/: app.scss  quasar.variables.scss
app/utils/: index.ts
chdlm_mini_dashboard/: dependencies.py  generate_ts_client.py  main.py  settings.py  utils.py
chdlm_mini_dashboard/clients/: google_api.py
chdlm_mini_dashboard/helpers/: mjml.py  utils.py
chdlm_mini_dashboard/managers/: chdlm_involvement.py
chdlm_mini_dashboard/models/: chdlm_involvement_data.py  commands.py  common.py  info.py
chdlm_mini_dashboard/routers/: command.py  commands.py  data.py  info.py
composables/api/: index.ts
pages/participation/: index.vue
scripts/google-apps/: main.gs  resources.gs  schemas.gs  utils.gs
server/: .env.example  .gitignore  dependencies.py  generate_openapi.py  generate_ts_client.py  main.py  pyproject.toml  settings.py
server/api/: data.get.ts  data.post.ts  info.get.ts
server/api/command/: send-email.post.ts
server/api/data/: members.get.ts
server/helpers/: utils.py
server/managers/: chdlm_involvement.py
server/models/: chdlm_involvement_data.py  commands.py  info.py
server/routers/: command.py  data.py  info.py
server/services/: chdlm-involvement.ts  mailgun.py  mailgun.ts  mongodb.ts
server/templates/: involvement-summary.mjml
server/templates/email/: involvement_summary.mjml
server/utils/: errors.ts  index.ts
shared/types/: database.types.ts  info.ts  involvement.ts  services.ts
shared/utils/: constants.ts  custom-dayjs.ts
types/: info.ts  involvement.ts
types/dto/: commands.ts  timesheets-extracted-data.ts
utils/: custom-dayjs.ts  index.ts
view/: .eslintrc.cjs  package.json  quasar.config.ts
(+21 files in other folders)
