[tool.poetry]
name = "chdlm-mini-dashboard"
version = "0.1.0"
description = ""
authors = ["Yannick Drolet <ydrolet@gmail.com>"]
readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.12"
nicegui = "^1.4.35"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chdlm_mini_dashboard = "chdlm_mini_dashboard.main:main"
