[tool.poetry]
name = "chdlm-mini-dashboard"
version = "0.1.0"
description = ""
authors = ["Yannick Drolet <ydrolet@gmail.com>"]
readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.12"
email-validator = "^2.2.0"
fastapi = {extras = ["standard"], version = "^0.112.2"}
jinja2 = "^3.1.4"
mjml-python = "^1.3.3"
pendulum = "^3.0.0"
pydantic = "^2.8.2"
pydantic-extra-types = "^2.9.0"
pydantic-settings = "^2.4.0"
sendgrid = "^6.11.0"
supabase = "^2.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chdlm_mini_dashboard = "chdlm_mini_dashboard.main:main"
