[tool.poetry]
package-mode = false
name = "chdlm-mini-dashboard-server"
authors = ["Yannick Drolet <ydrolet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
email-validator = "^2.2.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}
jinja2 = "^3.1.4"
mjml-python = "^1.3.3"
pendulum = "^3.0.0"
pydantic = "^2.9.2"
pydantic-extra-types = "^2.9.0"
pydantic-settings = "^2.5.2"
supabase = "^2.7.4"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
